19-03-2023
    Added functionality for new users to Sign Up.
    Added functionality for existing users to login.
    Added functionality for Admin to add new dish.

20-03-2023
    Designed customer's dashboard. (It displays food items and their info)